--- a/1st Project/shop/index.html
+++ b/1st Project/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/Image/CompanyLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SatTara DryFruits</title>
+    <title>SaT_Tara DryFruits</title>
   </head>
   <body>
     <div id="root"></div>
